Improved example, started adding features

--- a/example/views/index.erb
+++ b/example/views/index.erb
@@ -27,8 +27,19 @@
             </select>
           </td>
         </tr>
+        <tr>
+          <td>Notes:</td>
+          <td>
+            <input name="notes" value="..."/>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <input type="submit" value="Submit" />
+          </td>
+        </tr>
       </table>
-      <input type="submit" value="Submit" />
     </form>
   </body>
 </html>
