--- a/example/views/index.erb
+++ b/example/views/index.erb
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script type="text/javascript" src="/syn.js"></script>
     <script type="text/javascript" src="/app.js"></script>
   </head>
   <body>
