--- a/example/views/index.erb
+++ b/example/views/index.erb
@@ -37,7 +37,7 @@
         <tr>
           <td></td>
           <td>
-            <input type="submit" value="Submit" />
+            <input type="submit" value="Submit Location" />
           </td>
         </tr>
       </table>
